- makeCostMeasure: removed arg "task", names of cost matrix are checked on measure calculation
-- fixed weight handling and weight tag for some learners
- rename generatePartialPrediction, plotPartialPrediction, and plotPartialPredictionGGVIS to
  generatePartialDependence, plotPartialDependence, and plotPartialDependenceGGVIS

- new learners
-- surv.cv.CoxBoost
-- regr.penalized.fusedlasso
-- regr.glm
-- classif.C50
-- classif.penalized.ridge
-- classif.penalized.lasso
-- classif.penalized.fusedlasso
-- surv.penalized.ridge
-- surv.penalized.lasso
-- surv.penalized.fusedlasso

- removed learners
-- surv.optimCoxBoostPenalty
-- surv.penalized (split up, see new learners above)

- removed functions
-- getParamSet generic (now in ParamHelpers package)

mlr_2.8:
- Feature filter "univariate" had a bad name, was deprecated and is now called
 "univariate.model.score". The new one also has better defaults.
- (generate/plot)PartialPrediction: added new arg "geom" for tile plots
- small fix for plotBMRSummary
- the ModelMultiplexer inherits its predict.type from the base learners now
- check that learners in an ensemble have the same predict.type
- new function getBMRModels to extract stored models from a benchmark result
- Fixed a bug where several learners from the LiblineaR package
  ("classif.LiblineaRL2LogReg", "classif.LiblineaRL2SVC", "regr.LiblineaRL2L2SVR")
  were calling the wrong value for "type" (0) and thus training the wrong model.
- Fixed a bug where the resampling objects hout, cv2, cv3, cv5, cv10 were not documented
  in the ResampleDesc help page
- regr.xgboost, classif.xgboost: add feval param
- fixed a bug in irace tuning interface with unamed discrete values
- Fixed bugs in "jackknife" and "bootstrap" se estimators for regr.randomForest.
- Added "sd" estimator for regr.randomForest.
- Fixed a mini bug in ModelMultiplexer where hyperpars that are only needed in
  predict were not passed down correctly