@@ -19,20 +19,30 @@ makeRLearner.regr.km = function() {
       makeLogicalLearnerParam(id = "gr", default = TRUE),
       makeLogicalLearnerParam(id = "iso", default = FALSE),
       makeLogicalLearnerParam(id = "scaling", default = FALSE),
-      makeLogicalLearnerParam(id = "jitter", default = FALSE, when = "predict")
+      makeLogicalLearnerParam(id = "jitter", default = FALSE, when = "predict"),
+      makeNumericLearnerParam(id = "nugget.stability", requires = quote(!nugget.estim && is.null(nugget)))
     ),
     par.vals = list(jitter = FALSE),
     properties = c("numerics", "se"),
     name = "Kriging",
     short.name = "km",
-    note = 'In predict, we currently always use `type = "SK"`. The extra parameter `jitter` (default is `FALSE`) enables adding a very small jitter (order 1e-12) to the x-values before prediction, as `predict.km` reproduces the exact y-values of the training data points, when you pass them in, even if the nugget effect is turned on.'
+    note = 'In predict, we currently always use `type = "SK"`. The extra parameter `jitter` (default is `FALSE`) enables adding a very small jitter (order 1e-12) to the x-values before prediction, as `predict.km` reproduces the exact y-values of the training data points, when you pass them in, even if the nugget effect is turned on. \n We further introduced `nugget.stability` which sets the `nugget` to `nugget.stability * var(y)` before each training to improve numerical stability. We recommend a setting of 10^-8'
   )
 }
 
 #' @export
 trainLearner.regr.km = function(.learner, .task, .subset, .weights = NULL,  ...) {
   d = getTaskData(.task, .subset, target.extra = TRUE)
-  DiceKriging::km(design = d$data, response = d$target, ...)
+  args = list(...)
+  if (!is.null(args$nugget.stability)) {
+    if (args$nugget.stability == 0) {
+      args$nugget = 0
+    } else {
+      args$nugget = args$nugget.stability * var(d$target)  
+    }
+    args$nugget.stability = NULL
+  }
+  do.call(DiceKriging::km, c(list(design = d$data, response = d$target), args))
 }
 
 #' @export
